--- a/TermProject/TermProject/Resources/layout/Second.axml
+++ b/TermProject/TermProject/Resources/layout/Second.axml
@@ -10,7 +10,7 @@
 		android:layout_width="match_parent"
 		android:layout_height="29.5dp"
 		android:id="@+id/linearLayout1"
-		android:layout_marginTop="51.5dp"
+		android:layout_marginTop="69.5dp"
 		android:layout_marginLeft="11.0dp">
 		<ImageView
 			android:src="@android:drawable/ic_menu_gallery"
@@ -149,5 +149,40 @@
 			android:id="@+id/textView2"
 			android:layout_marginLeft="8.0dp" />
 	</LinearLayout>
+	<LinearLayout
+		android:orientation="horizontal"
+		android:minWidth="25px"
+		android:minHeight="25px"
+		android:layout_width="match_parent"
+		android:layout_height="29.5dp"
+		android:id="@+id/linearLayout1"
+		android:layout_marginTop="25.5dp"
+		android:layout_marginLeft="53.5dp">
+		<ImageView
+			android:src="@android:drawable/ic_menu_gallery"
+			android:layout_width="wrap_content"
+			android:layout_height="match_parent"
+			android:id="@+id/imageView1" />
+		<TextView
+			android:text="Total price of list"
+			android:textAppearance="?android:attr/textAppearanceMedium"
+			android:layout_width="wrap_content"
+			android:layout_height="match_parent"
+			android:id="@+id/textView1" />
+		<TextView
+			android:text="0"
+			android:textAppearance="?android:attr/textAppearanceMedium"
+			android:layout_width="wrap_content"
+			android:layout_height="match_parent"
+			android:id="@+id/textView2"
+			android:layout_marginLeft="8.0dp" />
+	</LinearLayout>
+	<Button
+		android:text="Button"
+		android:layout_width="309.0dp"
+		android:layout_height="35.0dp"
+		android:id="@+id/button1"
+		android:layout_marginLeft="34.0dp"
+		android:layout_marginTop="9.0dp" />
 
 </LinearLayout>
